@@ -1,3 +1,8 @@
+Sat Feb 22 15:03:05 2014  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>
+
+	* variable.c: adding extra example in docs.
+	  patched by Steve Klabnik. [Bug #9210]
+
 Sat Feb 22 15:01:21 2014  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv.rb (Resolv::DNS::Resource::TXT#data): Return concatenated
